feat: add redis client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,16 @@
 services:
-  dragonfly:
-    container_name: nextjs-redis-pubsub-dragonfly
-    image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
-    command: --cluster_mode=emulated --lock_on_hashtags --maxmemory=2gb
-    ulimits:
-      memlock: -1
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./data/dragonfly:/data
-    networks:
-      - nextjs-redis-pubsub
+    dragonfly:
+        container_name: nextjs-redis-pubsub-dragonfly
+        image: "docker.dragonflydb.io/dragonflydb/dragonfly"
+        command: --cluster_mode=emulated --lock_on_hashtags --maxmemory=2gb
+        ulimits:
+            memlock: -1
+        ports:
+            - "6379:6379"
+        volumes:
+            - ./data/dragonfly:/data
+        networks:
+            - nextjs-redis-pubsub
 networks:
-  nextjs-redis-pubsub:
-    driver: bridge
+    nextjs-redis-pubsub:
+        driver: bridge
