--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@radix-ui/react-slot": "^1.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "ioredis": "^5.4.2",
         "lucide-react": "^0.469.0",
         "next": "15.1.3",
         "react": "^19.0.0",
